tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-typed-struct-literal.wyst
module syntax.removed_typed_struct_literal

struct Value { raw: u64 }

fn rejected() {
  const value: Value = Value { raw: 1 }
}
